--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
     <link rel="stylesheet" href="./css/bootstrap-material-design.min.css">
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/room.css">
+    <style>
+        .hide {display:none;}
+    </style>
 </head>
 
 <body>
     <div id="root">
         <!-- 登录页面 -->
-        <div id="login-root">
+        <div id="login-root hide">
             <!-- 登录卡片 -->
-            <div id="login-card" class="card">
+            <div id="login-card" class="card ">
                 <!-- 顶部三个蓝条 -->
                 <div class="row-div" style="width: 100%; height: 10px">
                     <div style="width: 190px; height: 100%; background-color: #006EFF"></div>
