--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div id="root">
         <!-- 登录页面 -->
-        <div id="login-root hide">
+        <div id="login-root" class="hide">
             <!-- 登录卡片 -->
             <div id="login-card" class="card ">
                 <!-- 顶部三个蓝条 -->
