--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/room.css">
     <style>
-        .hide {display:none;}
+        #login-root.hide {display:none;}
     </style>
 </head>
 
