--- a/index.html
+++ b/index.html
@@ -458,6 +458,10 @@
     <script src="./js/rtc-detection.js"></script>
     <script src="./js/device-testing.js"></script>
     <script src="./js/index.js"></script>
+    <script>
+        // 默认执行设备检测
+        startDeviceConnect();
+    </script>
 </body>
 
 </html>
