显示聊天界面

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/room.css">
     <style>
         #login-root.hide {display:none;}
+        #room-root.show {display:block;}
     </style>
 </head>
 
@@ -329,7 +330,7 @@
             </div>
         </div>
         <!-- 聊天室页面 -->
-        <div id="room-root" class="col-div">
+        <div id="room-root" class="col-div show">
             <!-- header -->
             <div class="row-div card" style="width: 100%; height: 65px; justify-content: space-between;display:none">
                 <!-- 腾讯云logo -->
