--- a/index.html
+++ b/index.html
@@ -461,7 +461,8 @@
     <script src="./js/index.js"></script>
     <script>
         // 默认执行设备检测
-        startDeviceConnect();
+        // startDeviceConnect();
+        login();
     </script>
 </body>
 
